# google-cmp-speedup

./: README.md  generate.py  pyproject.toml
src/: cmp.css
