[tool.poetry]
name = "google-cmp-speedup"
version = "0.1.0"
description = ""
authors = ["Martin Svoboda <martin.svoboda@gmail.com>"]
readme = "README.md"
packages = [{include = "google_cmp_speedup"}]

[tool.poetry.dependencies]
python = "^3.9"
fonttools = "^4.40.0"
brotli = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
